--- a/plugin.xml
+++ b/plugin.xml
@@ -69,6 +69,7 @@
             <activity
                 android:name="com.google.zxing.client.android.CaptureActivity"
                 android:clearTaskOnLaunch="true"
+	        android:screenOrientation="portrait" 
                 android:configChanges="orientation|keyboardHidden"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                 android:windowSoftInputMode="stateAlwaysHidden"
